# shrimp

./: Cargo.toml  README.md  build.rs
src/: ast.rs  grammar.lalrpop  grammar.txt  main.rs  shrimp.lalrpop  shrimp.rs
src/parser/: ast.rs  mod.rs  shrimp.lalrpop  shrimp.rs
src/type_checker/: type_checker.rs
tests/: parser_test.rs  type_checker_test.rs
